# axon

./: .gitignore  CMakeLists.txt  README.md  TODO  axon.bcg  brainvisa.bcg  changelog.html  project_info.cmake  readme.html
brainvisa/: CCMServer.py  CMakeLists.txt  Protocol.py  Scheduler.py  Server.py  backwardCompatibleQt.py  diskitembox.ui  fMRIData.py  fileSystemOntology.py  loggingGUI.py  matlabValidation.py  minfExtensions.py  networkUtils.py  neuro.py  neuroConfig.py  neuroConfigGUI.py  neuroData.py  neuroDataGUI.py  neuroDiskItems.py  neuroException.py  neuroHierarchy.py  neuroHierarchyGUI.py  neuroLog.py  neuroLogGUI.py  neuroNetwork.py  neuroPopen2.py  neuroProcesses.py  neuroProcessesGUI.py  pxxssh.py  registration.py  remoteProcesses.py  remoteToolkit.py  shfjGlobals.py
brainvisa/hierarchies/brainvisa-3.0/: base.py  registration.py  spectroscopy.py
brainvisa/hierarchies/brainvisa-3.1.0/: base.py  history.py  raw_data.py  registration.py
brainvisa/hierarchies/brainvisa-3.2.0/: base.py  history.py  qualitycheck.py  raw_data.py  registration.py  volbrain.py
brainvisa/hierarchies/flat/: base.py
brainvisa/hierarchies/raw-bids-1.0/: raw_bids.py
brainvisa/hierarchies/shared/: base.py  registration.py
brainvisa/hierarchies/spm/: spm.py
brainvisa/matlab/LoadSave/: loadbz2.m  loadgz_opt.m  savebz2.m
brainvisa/matlab/utils/: BTransp.m  DistIS.m  DistL1L2.m  FenAR.m  FenAdaptAR.m  GPImenu.m  Hankel.m  Jury.m  TheStartup.m  Toeplitz.m  adn_lassy.m  adnois.m  altere.m  alterej.m  armaspec.m  arrow.m  banana.m  base.m  beep.m  besselh.m  besseln.m  bibselect.m  centre.m  circul.m  cometc.m  conv2s.m  dbanana.m  debase.m  dspAR.m  ellipse.m  entrer.m  entrer_ch.m  et.m  figfull.m  fillpoly.m  flip.m  fnum2str.m  genar.m  getglassy.m  goptions.m  (+60 more)
brainvisa/obsolete/: fMRIData.py  importationDialog.ui
brainvisa/protection_against_qt3/: qt.py
brainvisa/qt3gui/: __init__.py  command.py  neuroConfigGUI.py  neuroDataGUI.py  neuroExceptionGUI.py  neuroLogGUI.py  neuroProcessesGUI.py  searchbox.ui
brainvisa/qt4gui/: __init__.py  command.py  neuroConfigGUI.py  neuroDataGUI.py  neuroExceptionGUI.py  neuroLogGUI.py  neuroProcessesGUI.py  searchbox.ui  sw_process_view.ui  workflow_execution.ui
brainvisa/qtgui/: command.py  neuroConfigGUI.py  neuroDataGUI.py  neuroExceptionGUI.py  neuroLogGUI.py  neuroProcessesGUI.py
brainvisa/toolboxes/data management/: data management.minf  data management.py
brainvisa/toolboxes/datamind/: datamind.minf  datamind.py
brainvisa/toolboxes/editors/: editors.minf  editors.py
brainvisa/toolboxes/morphometry/: morphometry.py
brainvisa/toolboxes/structural_analysis/: structural_analysis.minf  structural_analysis.py
brainvisa/toolboxes/tools/: tools.py
brainvisa/toolboxes/viewers/: PSViewer.py  viewers.minf  viewers.py
brainvisa/types/: 3DT1_spm.py  builtin.py  fieldmap.py  history.py  nuclear_imaging.py  qualitycheck.py  registration.py  snapshots.py  spectroscopy.py  spm.py
cmake/: axon-config.cmake.in
config/: config.py.in  soma_config.py.in
doc/: BrainVisa_docProcessesCategories.tex  Brucker_rawdata_descriptor.tex  CMakeLists.txt  GEMS_archiver.tex  Programming_with_brainvisa.odp  axon.css  brainvisa.sdw  brainvisa.sxw  brainvisa_introduction_en.odp  intro_bv.odp  toolboxes-howto.txt  xml-howto.tex
doc/en/: translation.minf
doc/en/help/: aboutAnatomist.html  aboutBrainVISA.html  changelog.html  index.html  introduction.html  mainFeatures.html  readme.html
doc/examples/: brainvisaSetDatabase.py
doc/examples/processes/: DynamicSignature.py
doc/fr/: translation.minf
foms/: brainvisa-3.2.0.json  brainvisa-formats-3.2.0.json  formats-brainvisa-1.0.json  shared-brainvisa-1.0.json
mutimedia/images/: browse_update.xcf  nmr_server.xcf
python/: CMakeLists.txt
python/brainvisa/: Static.py  TextEditor.py  UserFile.py  brainvisaTranslation-qt4.ui  brainvisaTranslation.ui  checkParameters.py  config.py  debug.py  functional_processing_context.py  group_utils.py  history.py  info.py  mailing.py  matlab.py  matplotlibwidget.py  mpegConfig.py  multipleExecfile.py  multiplot.py  notifier.py  processes.py  psConfig.py  quaternion.py  registration.py  scheduler.py  services.py  shelltools.py  sitecustomize.py  soma_signature_process.py  test_utils.py  textEditor.ui  threadCalls.py  toolboxes.py  validation.py  widgetFactory.py  workflow.py
python/brainvisa/anatomist/: __init__.py  reusablewinhook.py
python/brainvisa/axon/: __init__.py  processes.py  processinfo.py  runprocess.py
python/brainvisa/configuration/: __init__.py  anatomist_configuration.py  api.py  axon_capsul_config_link.py  fsl_configuration.py  (+12 more)
python/fedji/: __init__.py  __main__.py  api.py  axon_frontend.py  mongodb_backend.py  sqlite_backend.py
python/sitecustomize/: axon_encoding.py
python/soma/: base.py  configuration.py  decorators.py  enum.py  env.py  httpupload.py  userinfoprovider.py
scripts/brainvisa/: axon_fso_to_fom.py  axon_to_capsul.py  axon_to_pipeline.py  brainvisaShowLog  brainvisaTranslation  bv_create_commands_doc  bv_create_doc_index  bv_indexhistoryitem.py  bv_sqlite_stats  capsul_to_axon.py  cleanMinf  convertXMLprocdoc  copyDatabaseStructure  fixMinf  graphLinkToData.sh  listAllDiskItemRequests.py  minf2XML  mv_spmfiles  pipeline_to_axon.py  tableditor
share/: CMakeLists.txt
share/icons/: brainvisa.icns
share/ui/: checkRegistrationViewer.ui  manualRegistration.ui  transformRoi.ui
soma-env/: soma-env-recipe.yaml
sphinxdoc/dev_doc/: capsul.rst  conf.py  developer_manual.rst  index.rst  python.rst  python_bv_configuration.rst  python_bv_processing.rst  python_bv_processing_gui.rst  python_bv_tools.rst  usecases.rst  usecases_nb.ipynb
sphinxdoc/sphinx/: brainvisa.rst  conf.py  developer_manual.rst  index.rst  python.rst  python_bv_data.rst  python_bv_data_gui.rst  usecases.rst
sphinxdoc/user_doc/: axon_manual.rst  axon_manual2.rst  brainrat_tutorial.rst  changelog.rst  conf.py  connectomist_tutorial.rst  index.rst  morphologist_tutorial.rst  tutorial.rst
src/sipsomaqt/: CMakeLists.txt  soma_qt.sip  soma_qt6.sip
(+609 files in other folders)
